syntax = "proto3";

package commands;

message ListRequest {}

message ErrorReply {
	bool status = 1;
	string error = 2;
}

message ListReply {
	repeated List data = 1;
	ErrorReply error = 2;
}

message List {
	string namespace = 1;
	string name = 2;
	string author = 3;
}

message GetRequest {
	string uri = 1;
	bool install_dependencies = 2;
}

message RemoveRequest {
	string namespace = 1;
	string name = 2;
}

message EnableRequest {
	string namespace = 1;
	string name = 2;
}

message DisableRequest {
	string namespace = 1;
	string name = 2;
}

message UploadRequest {
	bytes pem = 1;
	bytes key = 2;
}

// []bs = {len_hmac(1 byte), hmac..., body_file...}
message UploadCertsRequest {
	bytes pem = 1;
	bytes key = 2;
}

service Commands {
	rpc ListCommand (ListRequest) returns (ListReply) {}
	rpc GetCommand (GetRequest) returns (ErrorReply) {}
	rpc RemoveCommand (RemoveRequest) returns (ErrorReply) {}
	rpc EnableCommand (EnableRequest) returns (ErrorReply) {}
	rpc DisableCommand (DisableRequest) returns (ErrorReply) {}
	rpc UploadCommand (UploadRequest) returns (ErrorReply) {}

	rpc UploadCertsCommand(UploadCertsRequest) returns (ErrorReply) {}
}